# MOCK-AI-INTERVIEW-PLATFORM

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_questions.py  check_sessions.py  docker-compose.yml  install_log.txt  pyproject.toml  requirements.txt  scratch_list_users.py  scratch_verify_user.py  start.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: live_coach.py  mistral_client.py  prompt_compression.py  prompt_templates.py
backend/app/ai/rag/: chroma_store.py  chunker.py  embedder.py  faiss_store.py  pipeline.py  reranker.py  retriever.py
backend/app/core/: celery_app.py  events.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/database/: base.py
backend/app/database/migrations/: env.py
backend/app/database/repositories/: base_repository.py  interview_repository.py  resume_repository.py  user_repository.py
backend/app/domains/: websocket_router.py
backend/app/domains/auth/: models.py  router.py  schemas.py  service.py
backend/app/domains/interview/: adaptive_engine.py  evaluator.py  models.py  question_generator.py  router.py  schemas.py  service.py
backend/app/domains/jobs/: models.py  router.py  schemas.py  service.py
backend/app/storage/: local_storage.py
backend/app/tasks/: celery_app.py  notification_tasks.py  report_tasks.py  resume_tasks.py  video_tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_interview.py  test_jobs.py  test_quiz.py  test_quiz_overhaul.py  test_resume_integration.py  test_session_review.py  test_video_interview.py  test_websockets.py
backend/tests/unit/: test_pdf_extractor.py  test_resume.py
backend/tools/: check_import.py  run_import_subprocess.py
database/: README.md  schema.sql
(+739 files in other folders)
