[tool.poetry]
name = "mocrai-backend"
version = "2.0.0"
description = "Smart AI-Based Mock Interview & Performance Evaluation Platform Backend"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = {extras = ["email"], version = "^2.8.0"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
aiomysql = "^0.3.2"
pymysql = "^1.2.0"
cryptography = "^48.0.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
bcrypt = "^5.0.0"
python-multipart = "^0.0.9"
websockets = "^13.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = {extras = ["hiredis"], version = "^5.1.0"}
langchain = "^0.3.0"
langchain-mistralai = "^0.2.0"
langchain-community = "^0.3.0"
chromadb = "^0.6.0"
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.0.0"
rank-bm25 = "^0.2.2"
pymupdf = "^1.24.0"
pdfplumber = "^0.11.0"
pytesseract = "^0.3.0"
easyocr = "^1.7.0"
spacy = "^3.8.0"
mediapipe = "^0.10.0"
deepface = "^0.0.93"
opencv-python-headless = "^4.10.0"
faster-whisper = "^1.0.0"
librosa = "^0.10.0"
boto3 = "^1.35.0"
slowapi = "^0.1.0"
structlog = "^24.0.0"
pillow = "^10.0.0"
pyotp = "^2.9.0"
mistralai = "^1.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
